--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -8,5 +8,5 @@
 @theme {
     --font-sans: 'Instrument Sans', ui-sans-serif, system-ui, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji',
         'Segoe UI Symbol', 'Noto Color Emoji';
-    --color-agf-yellow: #FFCC00;
+    --color-agf-yellow: #F1B10E;
 }
